[gd_scene load_steps=11 format=2]

[ext_resource path="res://gamestates/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/rocket.png" type="Texture" id=2]

[sub_resource type="Gradient" id=8]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0.867188, 0.867188, 0.867188, 1, 0.230469, 0.230469, 0.230469, 1 )

[sub_resource type="GradientTexture" id=9]

flags = 4
gradient = SubResource( 8 )
width = 2048

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 3
emission_point_count = 2
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 120.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 16.0
initial_velocity_random = 0.5
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.5
scale_random = 0.0
color_ramp = SubResource( 9 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="ParticlesMaterial" id=10]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 120.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 16.0
initial_velocity_random = 0.5
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.5
scale_random = 0.0
color_ramp = SubResource( 9 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( -6.4033e-14, 0, 1 )
colors = PoolColorArray( 0.792969, 0.792969, 0.792969, 1, 0.515625, 0.515625, 0.515625, 1, 0.195312, 0.195312, 0.195312, 1 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.8
angular_velocity = 3.06408e-41
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Orbit Velocity", "Spread", "Trail" ]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 44.988

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Particles" type="Node2D" parent="." index="0"]

[node name="Thruster1" type="Particles2D" parent="Particles" index="0"]

position = Vector2( 4, 28 )
emitting = false
amount = 512
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform", "Z Index" ]

[node name="Thruster2" type="Particles2D" parent="Particles" index="1"]

position = Vector2( -4, 28 )
emitting = false
amount = 512
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 10 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="Explosion" type="Particles2D" parent="Particles" index="2"]

position = Vector2( 0, -30 )
emitting = false
amount = 2048
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.5
randomness = 0.8
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="Timers" type="Node" parent="." index="3"]

[node name="ResetTimer" type="Timer" parent="Timers" index="0"]

process_mode = 1
wait_time = 0.8
one_shot = false
autostart = false

[node name="ThrustTimer" type="Timer" parent="Timers" index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false


